--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "form-data": "^4.0.5",
     "groq-sdk": "^0.37.0",
-    "sqlite3": "^5.1.7"
+    "node-gyp": "^12.2.0",
+    "sqlite3": "^5.0.2",
+    "tar": "^7.5.7"
   }
 }
